<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="16dp">
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/name"
        android:inputType="textMultiLine"
        />

    <TextView

        android:text="@string/toppings"
        style="@style/HeaderTextStyle"/>
    <CheckBox
        android:id="@+id/whipped_cream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Whipped_cream"
        android:textSize="16sp"
        android:paddingLeft="24dp"/>
    <CheckBox
        android:id="@+id/chocolate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Chocolate"
        android:textSize="16sp"
        android:paddingLeft="24dp"/>

    <TextView
        android:id="@+id/quantity"

        android:text="@string/Quantity"
        style="@style/HeaderTextStyle"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/minus"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:paddingTop="16dp"
            android:text="-"
            android:onClick="decrement"/>
    <TextView
        android:id="@+id/quantity_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:paddingTop="16dp"
        android:layout_marginLeft="8dp"
        android:text="2" />
        <Button
            android:id="@+id/plus"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_below="@id/quantity"
            android:paddingTop="16dp"
            android:layout_marginLeft="8dp"
            android:text="+"
            android:onClick="increment"/>
    </LinearLayout>

    <TextView
        android:id="@+id/price"

        style="@style/HeaderTextStyle"
        android:paddingTop="16dp"
        android:text="@string/Order_summary" />
    <TextView
        android:id="@+id/order_summary_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:paddingTop="16dp"
        android:text="$0" />
    <Button
        android:id="@+id/order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/order_summary_text_view"
        android:paddingTop="16dp"
        android:text="@string/Order"
        android:onClick="submitOrder"/>

</LinearLayout>
</ScrollView>